--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,14 @@ set(CMAKE_CXX_FLAGS "-std=c++14")
 set(CMAKE_BUILD_TYPE "Debug")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -Wall -g -O2")
 
-find_package(Armadillo 7.0 REQUIRED)
+# find_package(Armadillo 7.0 REQUIRED)
 
-if(ARMADILLO_FOUND)
-  message("armadillo found")
-  include_directories(${ARMADILLO_INCLUDE_DIRS})
-else()
-  message(FATAL_ERROR "Cannot find Armadillo")
-endif()
+# if(ARMADILLO_FOUND)
+#   message("armadillo found")
+#   include_directories(${ARMADILLO_INCLUDE_DIRS})
+# else()
+#   message(FATAL_ERROR "Cannot find Armadillo")
+# endif()
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
