--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,8 +2,7 @@ add_library(findfk_libs
   WeightedQuickUnionPathCompression.cc
   aggregation.cc)
 
-target_link_libraries(findfk_libs
-  ${ARMADILLO_LIBRARIES})
+target_link_libraries(findfk_libs)
 
 add_executable(findfk findfk.cc)
 target_link_libraries(findfk findfk_libs)
