--- a/examples/fk.yaml
+++ b/examples/fk.yaml
@@ -1,8 +1,18 @@
 ---
 nx: 1
 ny: 1
-ratio_max: 0.05
+ratio_max: 0.15
 epsilon: 0.5
+type: k
+infile: input_fk2.txt
+outfile: output_fk2.txt
+file_f: f1.txt
+file_k: k1.txt
+file_c: c1.txt
 num_show: 5
-infile: input_fk.txt
-outfile: output_fk.txt
+mode:
+    - 2
+    - 1
+    - 3
+    - 4
+    - 5
